# MemoryManager

./: .gitignore  CMakeLists.txt  MemoryLeakManager.sln  MemoryManager.cpp  MemoryManager.h  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
MemoryLeakManagement/: MemoryLeakManagement.cpp  MemoryLeakManagement.vcxproj  MemoryLeakManagement.vcxproj.filters  MemoryLeakManager.cpp  MemoryLeakManager.hpp  MemoryManager.cpp  MemoryManager.h  test.cpp
